src/test/resources/syntactic/error/TC_ERROR_PARENTESIS.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 15 | SE ESPERABA: ; Y SE ENCONTRO: ) |
start{
    a=A.m((a)));
}